--- a/Maquetacion_basica/paginaHome.css
+++ b/Maquetacion_basica/paginaHome.css
@@ -23,7 +23,7 @@ body {
 }
     .nav{
         width: 100%;
-        height: 10%;
+        height: 6vh;
         background-color: black;
         display: flex;
         justify-content: space-around;
@@ -41,7 +41,7 @@ body {
             }
         .contenido{
             width: 85%;
-            height: 90%;
+            height: 95%;
             display: flex;
             flex-flow: row wrap;
             justify-content: space-around;
@@ -70,17 +70,3 @@ body {
                 height: auto;
                 margin-top: -40px;
             }
-/* GALERIA */
-.contenidoGaleria{
-    border: 2px solid green;
-    width: 85%;
-    height: 90%;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-items: center;
-}
-    .imagen{
-        width: 40%;
-        
-    }
