--- a/Maquetacion_basica/blog.css
+++ b/Maquetacion_basica/blog.css
@@ -42,7 +42,7 @@ body {
             width: 85%;
             height: 95%;
             display: flex;
-            flex-flow: row wrap;
+            flex-direction: row-reverse;
             justify-content: space-around;
             align-items: center;
         }
@@ -50,12 +50,12 @@ body {
                 color: rgb(4, 4, 4);
                 border: 6px green;
                 font-size: 16px;
-                height: 65%;
-                width: 57%;
+                height: 20vh;
+                width: 100%;
                 display: flex;
                 flex-direction: column;
-                justify-content: flex-start;
-                align-items: start;
+                justify-content: start;
+                align-items: center;
             }
                 .texto{
                     font-size: 12px;
@@ -63,9 +63,10 @@ body {
                 }
                 .texto p{
                     margin-bottom: 10px;
+                    text-align: center;
                 }
             .imagen{
-                width: 35%;
+                width: 55%;
                 height: auto;
                 margin-top: -40px;
             }
