--- a/CodenotchWeb/cursos.css
+++ b/CodenotchWeb/cursos.css
@@ -2,130 +2,141 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    text-decoration: none;
     font-family: 'Josefin Sans', sans-serif;
  
 }
 body{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    /* min-height: 100vh; */
-    background-size: cover; /* Ajustar la imagen para cubrir todo el fondo */
-    background-position: center; /* Posicionar la imagen en el centro del fondo */
-    
-}
-.padre{
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    letter-spacing: 0.5px;
 }
     .nav{
-        width: 100%;
-        height: 10vh;
+        width: 100vw;
+        height: 11vh;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
-        padding: 15px;
-        background-color: blue;
+        justify-content: space-around;
+        align-items: center;
+        background-color: black;
+        position: fixed;
     }
-        .text{
+        .navLinks{
             display: flex;
-            align-items: center;
+            flex-direction: row;
+            justify-content: space-around;
         }
-            .nav a{
+            .link{
                 color: white;
-                text-decoration: none;
-                font-size: 45px;
-                margin: 15px;
+                padding: 15px 40px;
             }
-            .imagen{
-                margin-left: 40px;
-                margin-top: 30px;
+            .link:hover{
+                color: rgb(35, 246, 147);
+            }
+            .landing img{
+                width: 200px;
             }
 
 /* CURSOS  */
-.padreCursos{
-    width: 90vw;
-    height: 60vh;
+.cursos{
+    height: 100vh;
+    background-image: url(img/fondoCursos.jpeg);
+    background-size: cover; 
+    background-position: center;
+    
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    padding: 20px;
+    padding-top: 70px;
 }
+    .cursos__bootcamp{
+        border: 2px solid black;
+        background-color: rgb(255, 255, 255,0.55);
+        border-radius: 15px;
+        height: 65vh;
+        width: 46vw;
+        text-align: center;
+        padding: 20px;
 
-h1{
-    font-size: 60px;
-    color: blue;
-    text-align: center;
-}
-
-h2{
-    font-size: 40px;
-    color: black;
-}
-
-
-h3{
-    font-size: 40px;
-    color: blue;
-}
-
-p{
-    font-size: 30px;
-    color: black;
-    margin-top: 20px;
-}
-.developer{
-    width: 45vw;
-    margin-right: 100px;
-}
-
-.data{
-    width: 45vw;
-}
-.curso3{
-    margin-top: 160px;
-}
-    .full{
-        border: blue 4px double;
-        border-radius: 10px;
-        margin-top: 90px;
-        height: 20vh;
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        justify-content: space-around;
+        align-items: center;
     }
-
-    .part{
-        border: blue 4px double;
-        border-radius: 10px;
-        margin-top: 50px;
-        height: 20vh;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-
-
-
-    .footer{
-        width: 100vw;
-        height: 8vh;
+        .bootcamp__title{
+            color: white;
+            text-shadow: 1px 1px 2px black;
+            font-size: 30px;
+        }
+            .word__color{
+                color: #10f294;
+            }
+        .bootcamp__info{
+            text-align: justify;
+            padding: 50px;
+            padding-top: 30px;
+            font-size: 20px;
+        }
+        .bootcamp__button{
+            all: unset;
+            background-color: #0000ff;
+            border: none;
+            border-radius: 15px;
+            box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+            padding: 15px 32px;
+            text-align: center;
+            font-size: 15px;
+            text-shadow: 1px 1px 1px black;
+            width: 30%;
+        }
+        .bootcamp__button:hover{
+            background-color: #10f294;
+        }
+            .button__link{
+                color: white;
+            }
+            .button__link:hover{
+                color: black;
+            }
+.convocatorias{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+    .convocatorias__header{
+        width: 100%;
         display: flex;
         flex-direction: row;
-        justify-content: flex-end;
-        align-items: center;
-        background-color: black;
+        justify-content: space-between;
+        padding: 20px;
+        padding-bottom: 30px;
     }
-        .imgFooter{
-            width: 70px;
-            margin-right: 20px;
+        .line{
+            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+            font-size: 26px;
         }
-        .imgFooter_tw{
-            width: 40px;
-            margin-top: 10px;
-            margin-right: 40px;
+
+    .footer{
+        background-color: black;
+            
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+        padding: 20px;
+    }
+        .footerLogo{
+             height: 25px;
+        }
+        .footerRrss{
+            display: flex;
+            flex-direction: row;
+            gap: 20px;
+        }
+        .footerCopyrigth{
+            color: white;
+            font-size: 11px;
         }
