--- a/CodenotchWeb/landing.css
+++ b/CodenotchWeb/landing.css
@@ -2,60 +2,58 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    text-decoration: none;
     font-family: 'Josefin Sans', sans-serif;
  
 }
 body{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    min-height: 100vh;
-    background-color: blue;
-    background-image: url("img/fondo.png");
-    background-size: cover; /* Ajustar la imagen para cubrir todo el fondo */
-    background-position: center; /* Posicionar la imagen en el centro del fondo */
-    
-}
-.padre{
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    /* justify-content: center; */
+    letter-spacing: 0.5px;
+    text-shadow: 1px 1px 1px black;    
 }
     .nav{
-        width: 100%;
-        height: 10vh;
+        width: 100vw;
+        height: 11vh;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
-        padding: 15px;
+        justify-content: space-around;
+        align-items: center;
+        background-color: black;
+        position: fixed;
     }
-        .text{
+        .navLinks{
             display: flex;
+            flex-direction: row;
+            justify-content: space-around;
+        }
+            .link{
+                color: white;
+                padding: 15px 40px;
+            }
+            .link:hover{
+                color: rgb(35, 246, 147);
+            }
+            .landing img{
+                width: 200px;
+            }
+        .header{
+            height: 91vh;
+            background-image: url(img/fondoLanding.png);
+            background-size: cover; 
+            background-position: center; 
+
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
             align-items: center;
         }
-            .nav a{
-                color: white;
-                text-decoration: none;
-                font-size: 45px;
-                margin: 15px;
-            }
-            .imagen{
-                margin-left: 40px;
-                margin-top: 30px;
-            }
-.hijo1{
-    display: flex;
-    flex-direction: row;
-    width: 85vw;
-    height: 70vh;
-    margin-top: 50px;
-}
+
     .contenido{
-        width: 50vw;
-        height: 50vh;
+        width: 60%;
+        height: 55vh;
+        padding-left: 30px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -63,36 +61,28 @@ body{
     }
         h1{
             color: rgb(255, 255, 255);
-            font-size: 70px;
+            font-size: 40px;
         }
-        .frase1{
-            display: flex;
-            flex-direction: row;
-
-        }
-                .exito{
-                    color: rgb(29, 240, 149);
-                    margin-left: 10px;
-                }
+            .exito{
+                color: rgb(29, 240, 149);
+            }
         .frase1_2{
             display: flex;
             justify-content: center;
             flex-direction: row;
-            margin-top: 30px;
+            margin-top: 15px;
         }
             .con{
-                font-size: 70px;
-                margin-top: 5px;
+                padding: 7px;
+                text-align: center;
             }
             .codenotch{
-                margin-left: 20px;
-                font-size: 80px;
+                font-size: 50px;
             }
         .frase2{
             color: rgb(255, 255, 255);
-            font-size: 70px;
-            margin-top: 140px;
-            margin-left: 110px;
+            font-size: 40px;
+            margin-top: 70px;
         }
             .frase2_2{
                 color: rgb(29, 240, 149);
@@ -100,66 +90,82 @@ body{
                 justify-content: center;
             }
         .promoCurso{
-            width: 40vw;
-            height: 50vh;
+            width: 40%;
+            height: 55vh;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: start;
         }
+            .promoCurso h2:hover{
+                text-decoration:underline;
+                color: aquamarine;
+            }
             .flecha{
-                height: 160px;
-                margin-left: 90px;
-                margin-top: 0px;
+                height: 80px;
+                padding-left: 20px;
+                padding-top: 10px;
             }
             h2{
-                margin-top: 40px;
-                font-size: 70px;
+                padding-top: 35px;
+                font-size: 30px;
                 color: white;
             }
             .programacion{
                 display: flex;
                 flex-direction: row;
+                padding-bottom: 80px;
             }
             .data{
                 display: flex;
                 flex-direction: row;
             }
-            .logoCurso{
-                height: 100px;
-            }
-
+    .banner{
+        height: 10vh;
+        background-color: black;
+        color: white;
+        
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        line-height: 1.3;
+    }
 
     .empresas{
-        width: 100vw;
-        height: 20vh;
+        height: 70vh;
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
         align-items: center;
-        color: white;
-        background-color: black;
-        margin-top: 60px;
+        text-align: center;
+        color: rgb(2, 40, 255);
+        padding: 50px;
+        gap: 50px;
     }
         h4{
-            font-size: 40px;
+            font-size: 30px;
         }
+        
 
     .footer{
-        width: 100vw;
-        height: 8vh;
+        background-color: black;
+
         display: flex;
         flex-direction: row;
-        justify-content: flex-end;
+        justify-content: space-around;
         align-items: center;
-        background-color: black;
+        padding: 20px;
     }
-        .imgFooter{
-            width: 70px;
-            margin-right: 20px;
+        .footerLogo{
+            height: 25px;
         }
-        .imgFooter_tw{
-            width: 40px;
-            margin-top: 10px;
-            margin-right: 40px;
+        .footerRrss{
+            display: flex;
+            flex-direction: row;
+            gap: 20px;
+        }
+        .footerCopyrigth{
+            color: white;
+            font-size: 11px;
         }
