--- a/Porfolio/styleB.css
+++ b/Porfolio/styleB.css
@@ -1,8 +1,50 @@
+/* Encabezado y navegación */
+header {
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 4vh;
+  color: #fff;
+  padding: 10px 0;
+  text-align: center;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav ul li {
+  display: inline;
+  margin: 0 15px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+  font-weight: bold;
+}
+nav ul li a:hover{
+  text-decoration: underline overline;
+  color: rgb(126, 0, 0);
+  font-size: 30px;
+}
+
 /* Estilo general */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    margin-top: 80px;
     background-color: #ffffff;
     color: #333333;
     display: flex;
@@ -11,47 +53,15 @@ body {
     align-items: center;
   }
   
-  /* Encabezado y navegación */
-  header {
-    background-color: #fcd529;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 8vh;
-    color: #fff;
-    padding: 10px 0;
-    text-align: center;
-  }
-  
-  nav ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  nav ul li {
-    display: inline;
-    margin: 0 15px;
-  }
-  
-  nav ul li a {
-    text-decoration: none;
-    color: black;
-    font-size: 25px;
-    font-weight: bold;
-  }
-  nav ul li a:hover{
-    text-decoration: underline overline;
-    color: rgb(126, 0, 0);
-    font-size: 30px;
-  }
-  
+
   /* Sección de presentación */
   .presentation {
     text-align: center;
     padding: 50px;
-    background-color: #fff;
+    background-image: url(img/textura.avif);
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    background-position: center start; 
   }
   
   .presentation h1 {
@@ -80,7 +90,8 @@ body {
   }
   .divPresentation img {
     animation: zoomIn 1s ease-in-out;
-    width: 20%;
+    width: 25%;
+    border-radius: 50%;
   }
   
   @keyframes zoomIn {
@@ -104,33 +115,27 @@ body {
   .page {
     padding: 40px;
   }
-  
-  .aboutMe{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-  }
 
   .contacto{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    width: 100%;
-    margin-top: 50px;
+    width: 100vw;
+    height: 100vh;
+    margin-top: 20px;
+    background-color: bisque;
   }
+
   form{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 80%;
-    margin-top: 30px;
+    width: 100%;
   }
   .contacto input, textarea{
-    width: 50%;
+    width: 700px;
     height: 5vh;
     margin-bottom: 10px;
   }
@@ -165,4 +170,31 @@ body {
     width: 45px;
     margin-left: 120px;
   }
-  
+  .proyects{
+    width: 100vw;
+    border: green 2px solid ;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-image: url(img/fondoProyects.jpeg);
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    background-position: center center; 
+  }
+  .imgProy{
+    width: 100%;
+    border: green 2px solid ;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .proyects img{
+    width: 550px;
+    margin-bottom: 30px;
+  }
+  .proyects img:hover{
+    border: rgb(242, 182, 71) 6px solid;
+    border-radius: 10%;
+  }
